Changelog
=========

4.6-dev - (unreleased)
----------------------

4.5 - (2012-07-13)
------------------
* Bug fix: use jQuery.inArray instead of indexOf to avoid errors in IE < 9
  [ichimdav #5355]

4.4 - (2012-04-26)
------------------
* Bug fix: Fixed duplicate tags in edit form
  [voineali #4862]

4.3 - (2011-12-15)
------------------
* Bug fix: Fixed to work also when new keywords are not allowed. [david.batranu]

4.2 - (2011-11-29)
------------------
* Bug fix: Fixed to work also when keywords are required. Pre-populate also with
  new tags
  [voineali #4773 (EEA)]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg

4.0 - (2011-11-18)
------------------
* Plone 4+ compatible version
  [avoinea]

1.0 - (2011-10-04)
------------------
* Initial release
