@@ -1,0 +1,20 @@
+[buildout]
+parts =
+    instance
+
+extends = versions.cfg
+index = http://eggrepo.eea.europa.eu/pypi/
+find-links = http://eggrepo.eea.europa.eu/simple
+
+[instance]
+user = admin:admin
+
+recipe = plone.recipe.zope2instance
+eggs =
+    Pillow
+    Plone
+    eea.tags>3.9
+    eea.jquery>4.0
+
+zcml =
+    eea.tags
