@@ -1,0 +1,47 @@
+[buildout]
+parts =
+    test
+    instance
+    omelette
+    i18ndude
+    i18nize
+
+extends = deployment.cfg
+
+extensions =
+    mr.developer
+
+sources-dir = src
+auto-checkout = *
+always-checkout = force
+
+[sources]
+eea.jquery = git https://github.com/collective/eea.jquery.git
+eea.tags   = git https://github.com/collective/eea.tags.git
+
+[test]
+recipe = zc.recipe.testrunner
+eggs =
+    eea.tags [test]
+    ${instance:eggs}
+zcml =
+    ${instance:zcml}
+defaults = []
+
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${instance:eggs}
+
+[i18ndude]
+recipe = zc.recipe.egg:scripts
+eggs = i18ndude
+
+[i18nize]
+recipe = collective.recipe.template
+input = ${buildout:directory}/i18nize.in
+output = ${buildout:bin-directory}/i18nize
+mode = 775
+dollar = $
+domain = eea
+packagepath = ${buildout:sources-dir}/eea.tags/eea/tags
+languages = en de it es pl fr ro
