@@ -1,0 +1,51 @@
+#!/bin/sh
+#
+# Shell script to manage .po files.
+#
+# Run this file in the folder main __init__.py of product
+#
+# E.g. if your product is yourproduct.name
+# you run this file in yourproduct.name/yourproduct/name
+#
+#
+# Copyright 2009 Twinapex Research http://www.twinapex.com
+# modified 2011 bei Klein & Partner KG - BlueDynamics Alliance
+#
+
+# Assume the product name is the current folder name
+CURRENT_PATH=${:packagepath}
+CATALOGNAME="${:domain}"
+DUDE="${buildout:bin-directory}/i18ndude"
+
+# List of languages
+LANGUAGES="${:languages}"
+
+# Create locales folder structure for languages
+install -d locales
+for lang in $LANGUAGES; do
+    install -d $CURRENT_PATH/locales/$lang/LC_MESSAGES
+done
+
+# Rebuild .pot
+$DUDE rebuild-pot --pot $CURRENT_PATH/locales/$CATALOGNAME.pot --create $CATALOGNAME $CURRENT_PATH
+
+# Compile po files
+for lang in $(find $CURRENT_PATH/locales -mindepth 1 -maxdepth 1 -type d); do
+    
+    if test -d $lang/LC_MESSAGES; then
+
+        PO=$lang/LC_MESSAGES/${dollar}{CATALOGNAME}.po
+
+        # Create po file if not exists
+        touch $PO
+
+        # Sync po file
+        echo "Syncing $PO"
+        $DUDE sync --pot $CURRENT_PATH/locales/$CATALOGNAME.pot $PO
+
+        # Compile .po to .mo
+        MO=$lang/LC_MESSAGES/${dollar}{CATALOGNAME}.mo
+        echo "Compiling $MO"
+        msgfmt -o $MO $PO
+    fi
+done
