@@ -1,0 +1,6 @@
+[buildout]
+extends = http://dist.plone.org/release/4.1-latest/versions.cfg
+
+[versions]
+setuptools = 0.6c11
+zc.buildout = 1.5.2
